[gd_scene load_steps=3 format=3 uid="uid://dyjxrghrelsms"]

[ext_resource type="Script" path="res://game_level.gd" id="1_a24jy"]
[ext_resource type="PackedScene" uid="uid://bytx4lbm1ug4o" path="res://node_2d.tscn" id="2_651yd"]

[node name="GameLevel" type="Node2D"]
script = ExtResource("1_a24jy")

[node name="CableContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ComponentContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ReadyButton" type="Button" parent="."]
offset_left = 942.0
offset_top = 532.0
offset_right = 1123.0
offset_bottom = 623.0
text = "Ready"

[node name="Room" parent="." instance=ExtResource("2_651yd")]

[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
